// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`Button\` renders 1`] = `
.c0 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
}

<button
  class=""
>
  <span
    class="c0"
  >
    Test text
  </span>
</button>
`;

exports[`\`Button\` styles Prop: background has value #ff0000 1`] = `
.c1 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
}

.c0 {
  background-color: #ff0000;
}

<button
  class="c0"
>
  <span
    class="c1"
  >
    Test text
  </span>
</button>
`;

exports[`\`Button\` styles Prop: borderRadius has value 1px 1`] = `
.c1 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
}

.c0 {
  border-radius: 1px;
}

<button
  class="c0"
>
  <span
    class="c1"
  >
    Test text
  </span>
</button>
`;

exports[`\`Button\` styles Prop: borderStyle has value solid 1`] = `
.c1 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
}

.c0 {
  border-style: solid;
}

<button
  class="c0"
>
  <span
    class="c1"
  >
    Test text
  </span>
</button>
`;

exports[`\`Button\` styles Prop: borderWidth has value 2px 1`] = `
.c1 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
}

.c0 {
  border-width: 2px;
}

<button
  class="c0"
>
  <span
    class="c1"
  >
    Test text
  </span>
</button>
`;

exports[`\`Button\` styles Prop: padding has value 10px 1`] = `
.c1 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
}

.c0 {
  padding: 10px;
}

<button
  class="c0"
>
  <span
    class="c1"
  >
    Test text
  </span>
</button>
`;

exports[`\`Button\` styles Prop: padding has value 10px 20px 1`] = `
.c1 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
}

.c0 {
  padding: 10px 20px;
}

<button
  class="c0"
>
  <span
    class="c1"
  >
    Test text
  </span>
</button>
`;

exports[`\`Typography\` styles Prop: color has value #ff0000 1`] = `
.c0 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  color: #ff0000;
}

<button
  class=""
>
  <span
    class="c0"
    color="#ff0000"
  >
    Test text
  </span>
</button>
`;

exports[`\`Typography\` styles Prop: color has value #ff0000 2`] = `
<span
  class="sc-bdVaJa kBwMOF"
  color="#ff0000"
>
  Test text
</span>
`;

exports[`\`Typography\` styles Prop: size has value 14px 1`] = `
.c0 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
}

<button
  class=""
>
  <span
    class="c0"
  >
    Test text
  </span>
</button>
`;

exports[`\`Typography\` styles Prop: size has value 14px 2`] = `
<span
  class="sc-bdVaJa fOTNNx"
>
  Test text
</span>
`;
